samples/_failures_safe/1761452442_940b5a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_72aa1786.c: In function ‘main’:
./samples/SAFE/__tmp_72aa1786.c:143:9: error: expected declaration or statement at end of input
  143 |         if (src < 0 || src >= num_nodes || dest < 0 || dest >= num_nodes) {
      |         ^~
./samples/SAFE/__tmp_72aa1786.c:143:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_72aa1786.c:143:9: error: expected declaration or statement at end of input
